# bench_chemistry

./: .gitignore  README.md  cluster_metrics.ipynb  model.ipynb  nba_lineups.csv  pyproject.toml  test.ipynb
src/: cluster_metrics.py  get_data.py  umap.py
src/hdb_umap/: clustering.py  enrich_lineups_with_clustering.py
src/hdbscan/: enrich_lineups_with_clustering.py  umap.py
src/k_means/: cluster_creation.py  cluster_metrics.py
src/model/: find_best_archetypes.py  model.py
