[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bench-chemistry"
version = "0.1.0"
description = "Analysis of NBA bench chemistry using clustering and machine learning"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "hdbscan",
    "jupyter",
    "matplotlib",
    "nba_api",
    "numpy",
    "pandas",
    "scikit-learn",
    "seaborn",
    "umap-learn"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
